--- a/apps/mix-portal/src/styles/variables.scss
+++ b/apps/mix-portal/src/styles/variables.scss
@@ -1,16 +1,17 @@
 :root {
-  --mix-header-height: 47px;
+  --mix-header-height: 64px;
   --mix-sub-header-height: 47px;
   --font-family: 'Lexend Deca', 'Roboto', -apple-system, BlinkMacSystemFont,
     'Apple Color Emoji', 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Fira Sans',
     'Droid Sans', 'Helvetica Neue', sans-serif;
   --sidebar-box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   --sidebar-background-color: #fff;
+  --mix-main-widget-color: #fff;
   --mix-toolbar-background-color: #fff;
-  --mix-body-background: #f5f8ff;
+  --mix-body-background: #f3f9fe;
   --mix-box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-  --mix-border-radius-01: 10px;
-  --mix-border-radius-02: 15px;
+  --mix-border-radius-01: 8px;
+  --mix-border-radius-02: 16px;
   --mix-primary: #0f92f3;
   --mix-toolbar-color: #fff;
   --mix-side-menu-group-bg: #fff;
