--- a/libs/mix.share/src/components/location-controller/location-controller.component.html
+++ b/libs/mix.share/src/components/location-controller/location-controller.component.html
@@ -1,5 +1,6 @@
 <div class="location-controller">
   <button type="button"
+          [disabled]="!!(locationService.canGoBack$ | async)"
           [size]="'s'"
           (click)="location.back()"
           tuiIconButton
