--- a/libs/mix.share/src/components/side-menu/side-menu.component.scss
+++ b/libs/mix.share/src/components/side-menu/side-menu.component.scss
@@ -7,42 +7,13 @@ $item-hover: rgba(243, 146, 243, 0.1);
   display: flex;
   position: relative;
 
-  &__big-logo {
-    margin: 20px 20px 24px 20px;
-    height: 40px;
-  }
-
   &__groups {
     width: var(--groupWidth);
     height: 100%;
     background-color: var(--mix-side-menu-group-bg);
-
-    .toggle {
-      margin-bottom: 16px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-      padding: 10px 0px;
-
-      .btn {
-        box-shadow: var(--mix-box-shadow);
-        border: 0.5px solid var(--tui-base-03);
-        border-radius: 3px;
-        cursor: pointer;
-        tui-svg {
-          transform: scale(0.8);
-        }
-
-        &:hover {
-          background-color: $item-hover;
-        }
-
-        &:active {
-          background-color: $item-active;
-        }
-      }
-    }
+    position: relative;
+    display: flex;
+    flex-direction: column;
 
     .item {
       height: var(--groupHeight);
@@ -92,108 +63,169 @@ $item-hover: rgba(243, 146, 243, 0.1);
         margin-block-start: 0;
         margin-block-end: 0;
       }
+
+      &.--bottom {
+        margin-top: auto;
+      }
     }
 
-    .search {
-      height: var(--mix-space-05);
-      margin-bottom: 16px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+    .toggle-mini-size {
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      clip-path: polygon(0 0, 0% 100%, 75% 100%);
+      border-bottom-left-radius: 2px;
+      bottom: 1px;
+      left: 1px;
+      background-color: var(--tui-base-05);
+      box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset,
+        rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
+      cursor: pointer;
+      opacity: 1;
+
+      &:hover {
+        opacity: 0.7;
+      }
     }
   }
 
   &__menu {
     width: calc(var(--groupWidth) + 256px);
+  }
 
-    .menu {
+  .menu {
+    width: 100%;
+    height: calc(100vh - 40px);
+    padding: 12px 24px 10px 24px;
+
+    &__label {
+      font-weight: 500;
+      font-size: 14px;
+      margin-top: 8px;
+      margin-bottom: 8px;
+    }
+
+    &__item {
+      padding: 5px 20px;
+      margin-left: 3px;
+      border-radius: 2rem;
+      cursor: pointer;
+      color: black;
+      transition: all 0.2s ease;
+    }
+
+    &__group {
+      font-weight: 700;
+    }
+
+    &__separator {
+      display: block;
+      height: 1px;
       width: 100%;
-      height: calc(100vh - 40px);
-      padding: 0px 24px 10px 24px;
+      background-color: var(--tui-base-03);
+      margin-bottom: 10px;
+      margin-top: 10px;
+    }
 
-      &__label {
-        font-weight: 500;
-        font-size: 14px;
-        margin-top: 8px;
-        margin-bottom: 8px;
+    &__no-data {
+      width: 100%;
+      height: 40px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 11px;
+      opacity: 0.7;
+    }
+
+    &__accordion {
+      .header.header_open {
+        background-color: var(--tui-base-01);
+        border-radius: 1rem;
       }
+    }
 
-      &__item {
-        padding: 5px 20px;
-        margin-bottom: 3px;
-        margin-left: 3px;
-        border-radius: 2rem;
-        cursor: pointer;
-        color: black;
-        transition: all 0.2s ease;
-        position: relative;
-        height: var(--mix-space-4);
+    &__file-tree {
+      overflow: auto;
+    }
+  }
 
-        [automation-id='tui-accordion__item-content'] {
-          padding: 0.5rem 1rem 1rem 1rem !important;
-        }
+  tui-accordion-item {
+    .wrapper {
+      background-color: unset !important;
+    }
 
-        &:hover {
-          opacity: 0.7;
-        }
-
-        &:active {
-          background-color: $item-active;
-        }
-
-        &::before {
-          display: block;
-          content: '';
-          width: 15px;
-          height: 25px;
-          position: absolute;
-          top: -8px;
-          left: 0;
-          border-bottom: 2px solid var(--tui-base-04);
-          border-left: 2px solid var(--tui-base-04);
-          border-bottom-left-radius: 5px;
-        }
-      }
-
-      &__group {
-        font-weight: 700;
-      }
-
-      &__separator {
-        display: block;
-        height: 1px;
-        width: 100%;
-        background-color: var(--tui-base-03);
-        margin-bottom: 10px;
-        margin-top: 10px;
-      }
-
-      &__no-data {
-        width: 100%;
-        height: 40px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: 11px;
-        opacity: 0.7;
-      }
-
-      &__accordion {
-        .header.header_open {
-          background-color: var(--tui-base-01);
-          border-radius: 1rem;
-        }
-      }
-
-      &__file-tree {
-        overflow: auto;
-      }
+    [automation-id='tui-accordion__item-content'] {
+      padding: 0rem 1rem !important;
     }
   }
 }
 
-tui-accordion-item {
-  .wrapper {
-    background-color: unset !important;
+.sub-menu-on-hover {
+  width: 250px;
+  overflow: auto;
+  padding: var(--mix-space-2);
+
+  tui-accordion-item {
+    .wrapper {
+      background-color: unset !important;
+    }
+
+    [automation-id='tui-accordion__item-content'] {
+      padding: 0rem 1rem !important;
+    }
+  }
+
+  .menu {
+    width: 100%;
+
+    &__label {
+      font-weight: 500;
+      font-size: 14px;
+      margin-top: 8px;
+      margin-bottom: 8px;
+    }
+
+    &__item {
+      padding: 5px 20px;
+      margin-left: 3px;
+      border-radius: 2rem;
+      cursor: pointer;
+      color: black;
+      transition: all 0.2s ease;
+    }
+
+    &__group {
+      font-weight: 700;
+    }
+
+    &__separator {
+      display: block;
+      height: 1px;
+      width: 100%;
+      background-color: var(--tui-base-03);
+      margin-bottom: 10px;
+      margin-top: 10px;
+    }
+
+    &__no-data {
+      width: 100%;
+      height: 40px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 11px;
+      opacity: 0.7;
+    }
+
+    &__accordion {
+      .header.header_open {
+        background-color: var(--tui-base-01);
+        border-radius: 1rem;
+      }
+    }
+
+    &__file-tree {
+      overflow: auto;
+    }
   }
 }
