--- a/apps/mix-cms/src/assets/styles/material-symbol.scss
+++ b/apps/mix-cms/src/assets/styles/material-symbol.scss
@@ -1,25 +1,39 @@
+/* fallback */
+@font-face {
+  font-family: 'Material Symbols Outlined';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/mat-symbol-400.woff2') format('woff2');
+}
+
 .material-symbols-outlined {
-  line-height: 1;
+  font-family: 'Material Symbols Outlined';
+  font-weight: normal;
+  font-style: normal;
   font-size: 16px;
+  line-height: 1;
   letter-spacing: normal;
   text-transform: none;
   display: inline-block;
   white-space: nowrap;
   word-wrap: normal;
+  direction: ltr;
+  -webkit-font-feature-settings: 'liga';
+  -webkit-font-smoothing: antialiased;
 }
 
 .mix-icon {
   font-family: 'Material Symbols Outlined';
   font-weight: normal;
   font-style: normal;
-  line-height: 1;
-  text-transform: none;
-  direction: ltr;
-  -webkit-font-feature-settings: 'liga';
-  -webkit-font-smoothing: antialiased;
   font-size: 16px;
+  line-height: 1;
   letter-spacing: normal;
+  text-transform: none;
   display: inline-block;
   white-space: nowrap;
   word-wrap: normal;
+  direction: ltr;
+  -webkit-font-feature-settings: 'liga';
+  -webkit-font-smoothing: antialiased;
 }
