--- a/apps/mix-cms/src/app/app.component.html
+++ b/apps/mix-cms/src/app/app.component.html
@@ -12,6 +12,8 @@
 
   <ng-container ngProjectAs="tuiOverContent">
   </ng-container>
+  <ng-container ngProjectAs="tuiOverContent">
+  </ng-container>
   <ng-container ngProjectAs="tuiOverDialogs">
   </ng-container>
   <ng-container ngProjectAs="tuiOverAlerts">
