--- a/apps/mix-cms/src/app/pages/portal/portal.layout.html
+++ b/apps/mix-cms/src/app/pages/portal/portal.layout.html
@@ -1,6 +1,4 @@
 <div class="mix-main-layout">
-
-
   <div class="mix-main-layout__flex --column">
     <div
       class="mix-main-layout__progress"
@@ -21,12 +19,16 @@
         <mix-main-side-menu></mix-main-side-menu>
       </div>
 
-      <div class="mix-main-layout__workspace">
-        <router-outlet></router-outlet>
-      </div>
+      <div class="d-flex w-100 h-100" style="position: relative">
+        <div class="mix-main-layout__workspace">
+          <router-outlet></router-outlet>
+        </div>
 
-      <div class="mix-main-layout__explorer">
-        <mix-main-explorer></mix-main-explorer>
+        <div class="mix-main-layout__explorer">
+          <mix-main-explorer></mix-main-explorer>
+        </div>
+
+        <mix-portal-sidebar></mix-portal-sidebar>
       </div>
     </div>
   </div>
